--- a/index.html
+++ b/index.html
@@ -1,1 +1,126 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Khushboo Patel | Portfolio</title>
+<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<style>
+/* ===== Base ===== */
+* { margin:0; padding:0; box-sizing:border-box; }
+body { font-family:'Poppins', sans-serif; line-height:1.6; scroll-behavior:smooth; }
+a { text-decoration:none; color:inherit; }
+img { max-width:100%; border-radius:8px; }
+
+/* ===== Header ===== */
+header { background:#0a192f; color:white; text-align:center; padding:80px 20px; transition:0.3s; }
+header h1 { font-size:2.8em; }
+header p { font-size:1.2em; margin-top:10px; }
+
+/* ===== Navigation ===== */
+nav { display:flex; justify-content:center; gap:25px; background:#112240; padding:15px; position:sticky; top:0; z-index:100; }
+nav a { color:white; font-weight:600; transition:0.3s; }
+nav a:hover { color:#64ffda; }
+
+/* ===== Sections ===== */
+section { padding:80px 20px; max-width:1000px; margin:auto; }
+h2 { border-bottom:2px solid #0a192f; padding-bottom:8px; margin-bottom:25px; color:#0a192f; }
+
+/* ===== Skills ===== */
+.skills, .projects { display:grid; grid-template-columns:repeat(auto-fit, minmax(250px, 1fr)); gap:20px; }
+.skills div, .project-card { border:1px solid #ccc; padding:20px; border-radius:10px; transition:0.3s; background:white; }
+.skills div:hover, .project-card:hover { transform:translateY(-5px); box-shadow:0 4px 20px rgba(0,0,0,0.1); }
+
+/* ===== Projects ===== */
+.project-card img { width:100%; margin-bottom:10px; }
+
+/* ===== Contact ===== */
+#contact a { color:#0a192f; font-weight:600; }
+
+/* ===== Footer ===== */
+footer { text-align:center; padding:20px; color:#555; font-size:0.9em; background:#f4f4f4; }
+
+/* ===== Dark Mode ===== */
+body.dark-mode { background:#0a192f; color:white; }
+body.dark-mode nav { background:#112240; }
+body.dark-mode .skills div, body.dark-mode .project-card { background:#112240; border-color:#0a192f; }
+body.dark-mode footer { background:#112240; color:#bbb; }
+
+/* ===== Dark Mode Button ===== */
+.dark-toggle { position:fixed; top:20px; right:20px; background:#64ffda; color:#0a192f; border:none; padding:10px 15px; border-radius:50px; cursor:pointer; font-weight:600; }
+</style>
+</head>
+<body>
+
+<button class="dark-toggle" onclick="toggleDark()">🌙</button>
+
+<header>
+  <h1>Hi, I'm Khushboo Patel</h1>
+  <p>Data & ICT Professional | Analytics | Machine Learning | Developer</p>
+</header>
+
+<nav>
+  <a href="#about">About</a>
+  <a href="#skills">Skills</a>
+  <a href="#projects">Projects</a>
+  <a href="#contact">Contact</a>
+</nav>
+
+<section id="about">
+  <h2>About Me</h2>
+  <p>Hello! I'm a passionate Data and ICT professional currently pursuing a Master of ICT. I enjoy building data-driven solutions, exploring new technologies, and creating projects that have real impact. I love solving problems with analytics and machine learning.</p>
+</section>
+
+<section id="skills">
+  <h2>Skills</h2>
+  <div class="skills">
+    <div><i class="fab fa-python"></i> Python</div>
+    <div><i class="fas fa-database"></i> SQL / MongoDB</div>
+    <div><i class="fas fa-chart-bar"></i> Power BI / Tableau</div>
+    <div><i class="fab fa-js"></i> JavaScript</div>
+    <div><i class="fas fa-robot"></i> Machine Learning</div>
+  </div>
+</section>
+
+<section id="projects">
+  <h2>Projects</h2>
+  <div class="projects">
+    <div class="project-card">
+      <img src="assets/project1.jpg" alt="Energy Prediction">
+      <h3>Energy Consumption Prediction</h3>
+      <p>Regression model to predict monthly energy usage using machine learning.</p>
+    </div>
+    <div class="project-card">
+      <img src="assets/project2.jpg" alt="Smart Learning Platform">
+      <h3>Smart Learning Platform</h3>
+      <p>MongoDB powered connected learning ecosystem with analytics features.</p>
+    </div>
+    <div class="project-card">
+      <img src="assets/project3.jpg" alt="AI Research Report">
+      <h3>AI Research Report</h3>
+      <p>Research on generative AI and its emotional intelligence implications.</p>
+    </div>
+  </div>
+</section>
+
+<section id="contact">
+  <h2>Contact</h2>
+  <p>Email: <strong>your.email@example.com</strong></p>
+  <p>LinkedIn: <strong><a href="https://linkedin.com/in/yourprofilename" target="_blank">linkedin.com/in/yourprofilename</a></strong></p>
+  <p>GitHub: <strong><a href="https://github.com/khushboo2601" target="_blank">github.com/khushboo2601</a></strong></p>
+</section>
+
+<footer>
+  © 2026 Khushboo Patel — Built with ❤️
+</footer>
+
+<script>
+function toggleDark(){
+  document.body.classList.toggle('dark-mode');
+}
+</script>
+
+</body>
+</html>
 
