--- a/index.html
+++ b/index.html
@@ -3,52 +3,71 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Khushboo Patel | Portfolio</title>
+<title>Khushboo Patel | Cyber Security & Data Analyst</title>
 <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <style>
 /* ===== Base ===== */
-* { margin:0; padding:0; box-sizing:border-box; }
-body { font-family:'Poppins', sans-serif; line-height:1.6; scroll-behavior:smooth; }
-a { text-decoration:none; color:inherit; }
-img { max-width:100%; border-radius:8px; }
+* {margin:0; padding:0; box-sizing:border-box;}
+body {font-family:'Poppins', sans-serif; line-height:1.6; scroll-behavior:smooth; background:#f9f9f9; color:#333;}
+a {text-decoration:none; color:inherit;}
+img {max-width:100%; border-radius:8px; transition:0.3s;}
 
 /* ===== Header ===== */
-header { background:#0a192f; color:white; text-align:center; padding:80px 20px; transition:0.3s; }
-header h1 { font-size:2.8em; }
-header p { font-size:1.2em; margin-top:10px; }
+header {background:#0a192f; color:white; text-align:center; padding:100px 20px; position:relative; overflow:hidden;}
+header h1 {font-size:2.8em; margin-bottom:10px;}
+header p {font-size:1.2em; color:#64ffda;}
+
+/* ===== Animated Header Background ===== */
+header::before {
+  content:"";
+  position:absolute;
+  width:200%;
+  height:200%;
+  top:-50%;
+  left:-50%;
+  background:linear-gradient(45deg, #64ffda, #0a192f, #112240, #0a192f);
+  animation: rotate 20s linear infinite;
+  z-index:0;
+}
+@keyframes rotate {
+  0%{transform:rotate(0deg);}
+  100%{transform:rotate(360deg);}
+}
+header * {position:relative; z-index:1;}
 
 /* ===== Navigation ===== */
-nav { display:flex; justify-content:center; gap:25px; background:#112240; padding:15px; position:sticky; top:0; z-index:100; }
-nav a { color:white; font-weight:600; transition:0.3s; }
-nav a:hover { color:#64ffda; }
+nav {display:flex; justify-content:center; gap:25px; background:#112240; padding:15px; position:sticky; top:0; z-index:100;}
+nav a {color:white; font-weight:600; transition:0.3s;}
+nav a:hover {color:#64ffda;}
 
 /* ===== Sections ===== */
-section { padding:80px 20px; max-width:1000px; margin:auto; }
-h2 { border-bottom:2px solid #0a192f; padding-bottom:8px; margin-bottom:25px; color:#0a192f; }
+section {padding:80px 20px; max-width:1000px; margin:auto;}
+h2 {border-bottom:2px solid #0a192f; padding-bottom:5px; margin-bottom:25px; color:#0a192f;}
 
-/* ===== Skills ===== */
-.skills, .projects { display:grid; grid-template-columns:repeat(auto-fit, minmax(250px, 1fr)); gap:20px; }
-.skills div, .project-card { border:1px solid #ccc; padding:20px; border-radius:10px; transition:0.3s; background:white; }
-.skills div:hover, .project-card:hover { transform:translateY(-5px); box-shadow:0 4px 20px rgba(0,0,0,0.1); }
-
-/* ===== Projects ===== */
-.project-card img { width:100%; margin-bottom:10px; }
+/* ===== Skills / Projects ===== */
+.skills, .projects {display:grid; grid-template-columns:repeat(auto-fit, minmax(250px, 1fr)); gap:20px;}
+.skills div, .project-card {border:1px solid #ccc; padding:20px; border-radius:10px; background:white; transition:0.3s; opacity:0; transform:translateY(20px);}
+.skills div:hover, .project-card:hover {transform:translateY(-5px); box-shadow:0 8px 25px rgba(0,0,0,0.15);}
 
 /* ===== Contact ===== */
-#contact a { color:#0a192f; font-weight:600; }
+#contact a {color:#0a192f; font-weight:600;}
 
 /* ===== Footer ===== */
-footer { text-align:center; padding:20px; color:#555; font-size:0.9em; background:#f4f4f4; }
+footer {text-align:center; padding:20px; color:#555; font-size:0.9em; background:#f4f4f4; margin-top:40px;}
 
 /* ===== Dark Mode ===== */
-body.dark-mode { background:#0a192f; color:white; }
-body.dark-mode nav { background:#112240; }
-body.dark-mode .skills div, body.dark-mode .project-card { background:#112240; border-color:#0a192f; }
-body.dark-mode footer { background:#112240; color:#bbb; }
+body.dark-mode {background:#0a192f; color:white;}
+body.dark-mode nav {background:#112240;}
+body.dark-mode .skills div, body.dark-mode .project-card {background:#112240; border-color:#0a192f;}
+body.dark-mode footer {background:#112240; color:#bbb;}
 
 /* ===== Dark Mode Button ===== */
-.dark-toggle { position:fixed; top:20px; right:20px; background:#64ffda; color:#0a192f; border:none; padding:10px 15px; border-radius:50px; cursor:pointer; font-weight:600; }
+.dark-toggle {position:fixed; top:20px; right:20px; background:#64ffda; color:#0a192f; border:none; padding:10px 15px; border-radius:50px; cursor:pointer; font-weight:600; z-index:1000;}
+
+/* ===== Animation ===== */
+.fade-up {opacity:0; transform:translateY(20px); transition:0.6s ease-out;}
+.fade-up.show {opacity:1; transform:translateY(0);}
 </style>
 </head>
 <body>
@@ -57,58 +76,107 @@ body.dark-mode footer { background:#112240; color:#bbb; }
 
 <header>
   <h1>Hi, I'm Khushboo Patel</h1>
-  <p>Data & ICT Professional | Analytics | Machine Learning | Developer</p>
+  <p>Cyber Security • Data Analyst • IT Governance</p>
 </header>
 
 <nav>
   <a href="#about">About</a>
   <a href="#skills">Skills</a>
   <a href="#projects">Projects</a>
+  <a href="#experience">Experience</a>
   <a href="#contact">Contact</a>
 </nav>
 
 <section id="about">
   <h2>About Me</h2>
-  <p>Hello! I'm a passionate Data and ICT professional currently pursuing a Master of ICT. I enjoy building data-driven solutions, exploring new technologies, and creating projects that have real impact. I love solving problems with analytics and machine learning.</p>
+  <p class="fade-up">Cyber Security & IT professional specialising in risk-driven data analytics, IT/OT governance, and compliance automation within regulated environments. Experienced in designing organisation-wide Cyber Security Policies, improving system integrity, and integrating compliance automation with Python, SQL, and Power BI. Skilled at bridging technical teams, business needs, and cybersecurity requirements to deliver clear actionable strategies.</p>
 </section>
 
 <section id="skills">
-  <h2>Skills</h2>
-  <div class="skills">
+  <h2>Key Skills</h2>
+  <div class="skills fade-up">
+    <div><i class="fas fa-shield-alt"></i> Cyber Risk Management (ISO 27001, NIST, COBIT, ISA/IEC)</div>
+    <div><i class="fas fa-network-wired"></i> IT & OT Security</div>
+    <div><i class="fas fa-bug"></i> Vulnerability Assessment</div>
+    <div><i class="fas fa-file-alt"></i> Policy Development</div>
+    <div><i class="fas fa-chart-line"></i> Risk Advisory & Audit Preparation</div>
     <div><i class="fab fa-python"></i> Python</div>
-    <div><i class="fas fa-database"></i> SQL / MongoDB</div>
-    <div><i class="fas fa-chart-bar"></i> Power BI / Tableau</div>
-    <div><i class="fab fa-js"></i> JavaScript</div>
-    <div><i class="fas fa-robot"></i> Machine Learning</div>
+    <div><i class="fas fa-database"></i> SQL</div>
+    <div><i class="fab fa-html5"></i> HTML / JavaScript</div>
+    <div><i class="fas fa-chart-bar"></i> Power BI Dashboards</div>
+    <div><i class="fab fa-microsoft"></i> Microsoft 365 & SharePoint</div>
+    <div><i class="fas fa-users"></i> Leadership & Stakeholder Communication</div>
+    <div><i class="fas fa-check-circle"></i> Quality & Compliance Management</div>
   </div>
 </section>
 
 <section id="projects">
   <h2>Projects</h2>
-  <div class="projects">
+  <div class="projects fade-up">
     <div class="project-card">
-      <img src="assets/project1.jpg" alt="Energy Prediction">
       <h3>Energy Consumption Prediction</h3>
-      <p>Regression model to predict monthly energy usage using machine learning.</p>
+      <p>ML-based risk modelling to forecast energy consumption and optimise operations.</p>
     </div>
     <div class="project-card">
-      <img src="assets/project2.jpg" alt="Smart Learning Platform">
       <h3>Smart Learning Platform</h3>
-      <p>MongoDB powered connected learning ecosystem with analytics features.</p>
+      <p>MongoDB schema for connected learning ecosystem with analytics and automation.</p>
     </div>
     <div class="project-card">
-      <img src="assets/project3.jpg" alt="AI Research Report">
-      <h3>AI Research Report</h3>
-      <p>Research on generative AI and its emotional intelligence implications.</p>
+      <h3>AI Symposium Research</h3>
+      <p>Study on emotionally intelligent AI risks and governance frameworks.</p>
     </div>
   </div>
 </section>
 
+<section id="experience">
+  <h2>Professional Experience</h2>
+  <div class="fade-up">
+    <h3>Calibration Technician – NVMS (Current)</h3>
+    <ul>
+      <li>Designed & implemented Cyber Security Policy for IT/OT systems</li>
+      <li>Conducted cyber & operational risk assessments</li>
+      <li>Developed Python automation tools for compliance reporting</li>
+      <li>Built Power BI dashboards to monitor calibration and cybersecurity performance</li>
+    </ul>
+    <h3>Team Leader – Materials Technology Centre (Sep 2021 – Dec 2023)</h3>
+    <ul>
+      <li>Coordinated materials testing under Australian Standards & NATA</li>
+      <li>Delivered quality improvement and trend reporting</li>
+      <li>Managed technical teams and audits</li>
+    </ul>
+    <h3>Laboratory Technician – Midland Brick (Jan 2020 – Sep 2021)</h3>
+    <ul>
+      <li>Conducted compliance testing for environmental & operational risks</li>
+      <li>Developed secure digital record systems for compliance</li>
+    </ul>
+  </div>
+</section>
+
+<section id="education">
+  <h2>Education</h2>
+  <div class="fade-up">
+    <p><strong>Master of ICT</strong> – University of the Sunshine Coast (Expected 2025)</p>
+    <p><strong>Diploma of Information Technology</strong> – Equinim College, 2025</p>
+    <p><strong>Bachelor & Master of Science – Biotechnology</strong></p>
+  </div>
+</section>
+
+<section id="certifications">
+  <h2>Certifications</h2>
+  <ul class="fade-up">
+    <li>Microsoft Certified: Security, Compliance & Identity Fundamentals</li>
+    <li>IT Specialist – Python</li>
+    <li>NATA – Quality Management in Laboratory</li>
+    <li>Excel Advanced – Power BI, VBA</li>
+  </ul>
+</section>
+
 <section id="contact">
   <h2>Contact</h2>
-  <p>Email: <strong>your.email@example.com</strong></p>
-  <p>LinkedIn: <strong><a href="https://linkedin.com/in/yourprofilename" target="_blank">linkedin.com/in/yourprofilename</a></strong></p>
-  <p>GitHub: <strong><a href="https://github.com/khushboo2601" target="_blank">github.com/khushboo2601</a></strong></p>
+  <p class="fade-up">📍 Aveley, WA 6069</p>
+  <p>📧 <a href="mailto:p.kh2601@gmail.com">p.kh2601@gmail.com</a></p>
+  <p>📱 +61 415 225 295</p>
+  <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/khushboo-patel-1959a812a" target="_blank">linkedin.com/in/khushboo-patel-1959a812a</a></p>
 </section>
 
 <footer>
@@ -116,11 +184,21 @@ body.dark-mode footer { background:#112240; color:#bbb; }
 </footer>
 
 <script>
-function toggleDark(){
-  document.body.classList.toggle('dark-mode');
-}
+// Dark Mode Toggle
+function toggleDark(){document.body.classList.toggle('dark-mode');}
+
+// Fade-in Animation
+const faders = document.querySelectorAll('.fade-up');
+const appearOptions = {threshold:0.2, rootMargin:"0px 0px -50px 0px"};
+const appearOnScroll = new IntersectionObserver(function(entries, observer){
+  entries.forEach(entry=>{
+    if(!entry.isIntersecting) return;
+    entry.classList.add('show');
+    observer.unobserve(entry.target);
+  });
+}, appearOptions);
+faders.forEach(fader => appearOnScroll.observe(fader));
 </script>
 
 </body>
 </html>
-
