--- a/index.html
+++ b/index.html
@@ -7,67 +7,51 @@
 <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <style>
-/* ===== Base ===== */
 * {margin:0; padding:0; box-sizing:border-box;}
 body {font-family:'Poppins', sans-serif; line-height:1.6; scroll-behavior:smooth; background:#f9f9f9; color:#333;}
 a {text-decoration:none; color:inherit;}
 img {max-width:100%; border-radius:8px; transition:0.3s;}
 
-/* ===== Header ===== */
+/* Header */
 header {background:#0a192f; color:white; text-align:center; padding:100px 20px; position:relative; overflow:hidden;}
 header h1 {font-size:2.8em; margin-bottom:10px;}
 header p {font-size:1.2em; color:#64ffda;}
+header::before {content:""; position:absolute; width:200%; height:200%; top:-50%; left:-50%; background:linear-gradient(45deg,#64ffda,#0a192f,#112240,#0a192f); animation:rotate 20s linear infinite; z-index:0;}
+@keyframes rotate{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
+header *{position:relative; z-index:1;}
 
-/* ===== Animated Header Background ===== */
-header::before {
-  content:"";
-  position:absolute;
-  width:200%;
-  height:200%;
-  top:-50%;
-  left:-50%;
-  background:linear-gradient(45deg, #64ffda, #0a192f, #112240, #0a192f);
-  animation: rotate 20s linear infinite;
-  z-index:0;
-}
-@keyframes rotate {
-  0%{transform:rotate(0deg);}
-  100%{transform:rotate(360deg);}
-}
-header * {position:relative; z-index:1;}
+/* Navigation */
+nav{display:flex; justify-content:center; gap:25px; background:#112240; padding:15px; position:sticky; top:0; z-index:100;}
+nav a{color:white; font-weight:600; transition:0.3s;}
+nav a:hover{color:#64ffda;}
 
-/* ===== Navigation ===== */
-nav {display:flex; justify-content:center; gap:25px; background:#112240; padding:15px; position:sticky; top:0; z-index:100;}
-nav a {color:white; font-weight:600; transition:0.3s;}
-nav a:hover {color:#64ffda;}
+/* Sections */
+section{padding:60px 20px; max-width:1000px; margin:auto;}
+h2{border-bottom:2px solid #0a192f; padding-bottom:5px; margin-bottom:25px; color:#0a192f;}
 
-/* ===== Sections ===== */
-section {padding:80px 20px; max-width:1000px; margin:auto;}
-h2 {border-bottom:2px solid #0a192f; padding-bottom:5px; margin-bottom:25px; color:#0a192f;}
+/* Skills / Projects */
+.skills, .projects{display:grid; grid-template-columns:repeat(auto-fit, minmax(250px,1fr)); gap:20px;}
+.skills div, .project-card{border:1px solid #ccc; padding:20px; border-radius:10px; background:white; transition:0.3s; opacity:0; transform:translateY(20px);}
+.skills div:hover, .project-card:hover{transform:translateY(-5px); box-shadow:0 8px 25px rgba(0,0,0,0.15);}
 
-/* ===== Skills / Projects ===== */
-.skills, .projects {display:grid; grid-template-columns:repeat(auto-fit, minmax(250px, 1fr)); gap:20px;}
-.skills div, .project-card {border:1px solid #ccc; padding:20px; border-radius:10px; background:white; transition:0.3s; opacity:0; transform:translateY(20px);}
-.skills div:hover, .project-card:hover {transform:translateY(-5px); box-shadow:0 8px 25px rgba(0,0,0,0.15);}
+/* Contact */
+#contact a{color:#0a192f; font-weight:600;}
 
-/* ===== Contact ===== */
-#contact a {color:#0a192f; font-weight:600;}
+/* Footer */
+footer{text-align:center; padding:20px; color:#555; font-size:0.9em; background:#f4f4f4; margin-top:40px;}
 
-/* ===== Footer ===== */
-footer {text-align:center; padding:20px; color:#555; font-size:0.9em; background:#f4f4f4; margin-top:40px;}
+/* Dark Mode */
+body.dark-mode{background:#0a192f; color:white;}
+body.dark-mode nav{background:#112240;}
+body.dark-mode .skills div, body.dark-mode .project-card{background:#112240; border-color:#0a192f;}
+body.dark-mode footer{background:#112240; color:#bbb;}
 
-/* ===== Dark Mode ===== */
-body.dark-mode {background:#0a192f; color:white;}
-body.dark-mode nav {background:#112240;}
-body.dark-mode .skills div, body.dark-mode .project-card {background:#112240; border-color:#0a192f;}
-body.dark-mode footer {background:#112240; color:#bbb;}
+/* Dark Mode Button */
+.dark-toggle{position:fixed; top:20px; right:20px; background:#64ffda; color:#0a192f; border:none; padding:10px 15px; border-radius:50px; cursor:pointer; font-weight:600; z-index:1000;}
 
-/* ===== Dark Mode Button ===== */
-.dark-toggle {position:fixed; top:20px; right:20px; background:#64ffda; color:#0a192f; border:none; padding:10px 15px; border-radius:50px; cursor:pointer; font-weight:600; z-index:1000;}
-
-/* ===== Animation ===== */
-.fade-up {opacity:0; transform:translateY(20px); transition:0.6s ease-out;}
-.fade-up.show {opacity:1; transform:translateY(0);}
+/* Animation */
+.fade-up{opacity:0; transform:translateY(20px); transition:0.6s ease-out;}
+.fade-up.show{opacity:1; transform:translateY(0);}
 </style>
 </head>
 <body>
@@ -84,12 +68,14 @@ body.dark-mode footer {background:#112240; color:#bbb;}
   <a href="#skills">Skills</a>
   <a href="#projects">Projects</a>
   <a href="#experience">Experience</a>
+  <a href="#education">Education</a>
+  <a href="#certifications">Certifications</a>
   <a href="#contact">Contact</a>
 </nav>
 
 <section id="about">
   <h2>About Me</h2>
-  <p class="fade-up">Cyber Security & IT professional specialising in risk-driven data analytics, IT/OT governance, and compliance automation within regulated environments. Experienced in designing organisation-wide Cyber Security Policies, improving system integrity, and integrating compliance automation with Python, SQL, and Power BI. Skilled at bridging technical teams, business needs, and cybersecurity requirements to deliver clear actionable strategies.</p>
+  <p class="fade-up">Cyber Security & IT professional specialising in risk-driven data analytics, IT/OT governance, and compliance automation within regulated environments. Experienced in designing organisation-wide Cyber Security Policies, improving system integrity, and integrating compliance automation with Python, SQL, and Power BI. Skilled at bridging technical teams, business needs, and cybersecurity requirements to deliver clear actionable strategies. Bringing experience in calibration, laboratory operations, and technical service delivery with a strong background in data management, equipment workflows, and regulatory compliance.</p>
 </section>
 
 <section id="skills">
@@ -137,6 +123,7 @@ body.dark-mode footer {background:#112240; color:#bbb;}
       <li>Conducted cyber & operational risk assessments</li>
       <li>Developed Python automation tools for compliance reporting</li>
       <li>Built Power BI dashboards to monitor calibration and cybersecurity performance</li>
+      <li>Integrated data management systems to streamline workflows</li>
     </ul>
     <h3>Team Leader – Materials Technology Centre (Sep 2021 – Dec 2023)</h3>
     <ul>
@@ -155,7 +142,7 @@ body.dark-mode footer {background:#112240; color:#bbb;}
 <section id="education">
   <h2>Education</h2>
   <div class="fade-up">
-    <p><strong>Master of ICT</strong> – University of the Sunshine Coast (Expected 2025)</p>
+    <p><strong>Master of ICT</strong> – University of the Sunshine Coast (Expected 2025), Major: Cyber Security & Data Analysis</p>
     <p><strong>Diploma of Information Technology</strong> – Equinim College, 2025</p>
     <p><strong>Bachelor & Master of Science – Biotechnology</strong></p>
   </div>
@@ -193,7 +180,7 @@ const appearOptions = {threshold:0.2, rootMargin:"0px 0px -50px 0px"};
 const appearOnScroll = new IntersectionObserver(function(entries, observer){
   entries.forEach(entry=>{
     if(!entry.isIntersecting) return;
-    entry.classList.add('show');
+    entry.target.classList.add('show');
     observer.unobserve(entry.target);
   });
 }, appearOptions);
