--- a/index.html
+++ b/index.html
@@ -116,29 +116,41 @@ body.dark-mode footer{background:#112240; color:#bbb;}
 
 <section id="experience">
   <h2>Professional Experience</h2>
-  <div class="fade-up">
-    <h3>Calibration Technician – NVMS (Current)</h3>
-    <ul>
-      <li>Designed & implemented Cyber Security Policy for IT/OT systems</li>
-      <li>Conducted cyber & operational risk assessments</li>
-      <li>Developed Python automation tools for compliance reporting</li>
-      <li>Built Power BI dashboards to monitor calibration and cybersecurity performance</li>
-      <li>Integrated data management systems to streamline workflows</li>
-    </ul>
-    <h3>Team Leader – Materials Technology Centre (Sep 2021 – Dec 2023)</h3>
-    <ul>
-      <li>Coordinated materials testing under Australian Standards & NATA</li>
-      <li>Delivered quality improvement and trend reporting</li>
-      <li>Managed technical teams and audits</li>
-    </ul>
-    <h3>Laboratory Technician – Midland Brick (Jan 2020 – Sep 2021)</h3>
-    <ul>
-      <li>Conducted compliance testing for environmental & operational risks</li>
-      <li>Developed secure digital record systems for compliance</li>
-    </ul>
+  <div class="projects fade-up"> <!-- using same grid style as projects -->
+    
+    <div class="project-card">
+      <h3>Calibration Technician – NVMS (Current)</h3>
+      <p>West Leederville, WA</p>
+      <ul>
+        <li>Designed & implemented Cyber Security Policy for IT/OT systems</li>
+        <li>Conducted cyber & operational risk assessments</li>
+        <li>Developed Python automation tools for compliance reporting</li>
+        <li>Built Power BI dashboards to monitor calibration and cybersecurity performance</li>
+        <li>Integrated data management systems to streamline workflows</li>
+      </ul>
+    </div>
+
+    <div class="project-card">
+      <h3>Team Leader – Materials Technology Centre (Sep 2021 – Dec 2023)</h3>
+      <p>Hazelmere, WA</p>
+      <ul>
+        <li>Coordinated materials testing under Australian Standards & NATA</li>
+        <li>Delivered quality improvement and trend reporting</li>
+        <li>Managed technical teams and audits</li>
+      </ul>
+    </div>
+
+    <div class="project-card">
+      <h3>Laboratory Technician – Midland Brick (Jan 2020 – Sep 2021)</h3>
+      <p>South Guildford, WA</p>
+      <ul>
+        <li>Conducted compliance testing for environmental & operational risks</li>
+        <li>Developed secure digital record systems for compliance</li>
+      </ul>
+    </div>
+
   </div>
 </section>
-
 <section id="education">
   <h2>Education</h2>
   <div class="fade-up">
