--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 <style>
+  /* TEXT READABILITY FIX */
+.timeline-item p,
+.project-card p,
+#about p {
+  line-height: 1.9;
+  margin-top: 12px;
+  max-width: 100%;
+  text-align: left;
+}
+
+/* Widen experience container */
+.timeline {
+  max-width: 1000px;
+}
+
+/* Better spacing between experience entries */
+.timeline-item {
+  padding-bottom: 20px;
+}
+
 *{margin:0;padding:0;box-sizing:border-box}
 body{
   font-family:'Poppins',sans-serif;
