--- a/index.html
+++ b/index.html
@@ -1,51 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Khushboo Patel | Cyber Security & Data Analyst</title>
 
 <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 <style>
-  /* TEXT READABILITY FIX */
-.timeline-item p,
-.project-card p,
-#about p {
-  line-height: 1.9;
-  margin-top: 12px;
-  max-width: 100%;
-  text-align: left;
-}
-
-/* Widen experience container */
-.timeline {
-  max-width: 1000px;
-}
-
-/* Better spacing between experience entries */
-.timeline-item {
-  padding-bottom: 20px;
-}
-
 *{margin:0;padding:0;box-sizing:border-box}
+
 body{
   font-family:'Poppins',sans-serif;
   background:#f9f9f9;
   color:#333;
-  line-height:1.6;
+  line-height:1.9;
 }
+
 a{text-decoration:none;color:inherit}
-section{padding:70px 20px;max-width:1100px;margin:auto}
-h2{margin-bottom:30px;color:#0a192f;border-bottom:2px solid #0a192f;display:inline-block}
+
+section{
+  padding:80px 20px;
+  max-width:1100px;
+  margin:auto;
+}
+
+h2{
+  color:#0a192f;
+  margin-bottom:30px;
+  border-bottom:2px solid #0a192f;
+  display:inline-block;
+  padding-bottom:6px;
+}
 
 /* HEADER */
 header{
   background:#0a192f;
   color:white;
   text-align:center;
-  padding:110px 20px;
+  padding:120px 20px;
 }
 header h1{font-size:3em}
 header p{color:#64ffda;font-size:1.2em;margin-top:10px}
@@ -75,45 +69,71 @@ nav a:hover{color:#64ffda}
   transform:none;
 }
 
+/* BUTTONS */
+.resume-btn{
+  display:inline-block;
+  background:#64ffda;
+  color:#0a192f;
+  padding:12px 22px;
+  border-radius:30px;
+  font-weight:600;
+  margin-top:25px;
+}
+
 /* SKILLS */
 .skills{
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
   gap:20px;
 }
 .skill-box{
   background:white;
-  padding:20px;
-  border-radius:12px;
-  box-shadow:0 6px 20px rgba(0,0,0,0.08);
+  padding:22px;
+  border-radius:14px;
+  box-shadow:0 8px 25px rgba(0,0,0,0.08);
 }
 
 /* PROJECTS */
 .projects{
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
+  grid-template-columns:repeat(auto-fit,minmax(300px,1fr));
   gap:25px;
 }
 .project-card{
   background:white;
   padding:25px;
-  border-radius:15px;
+  border-radius:16px;
   box-shadow:0 10px 30px rgba(0,0,0,0.12);
 }
 
-/* TIMELINE */
-.timeline{
-  border-left:4px solid #64ffda;
-  padding-left:25px;
+/* EXPERIENCE ACCORDION */
+.exp-card{
+  background:white;
+  padding:25px 28px;
+  border-radius:16px;
+  margin-bottom:25px;
+  box-shadow:0 10px 30px rgba(0,0,0,0.12);
+  cursor:pointer;
 }
-.timeline-item{
-  margin-bottom:35px;
+.exp-header{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
 }
-.timeline-item h3{color:#0a192f}
-.timeline-item span{font-size:0.9em;color:#555}
+.exp-header h3{color:#0a192f}
+.exp-header span{font-size:0.9em;color:#555}
+.exp-content{
+  margin-top:18px;
+  display:none;
+}
+.exp-card.active .exp-content{display:block}
+
+/* EDUCATION & LISTS */
+ul{margin-left:20px;margin-top:10px}
+li{margin-bottom:8px}
 
 /* CONTACT */
-#contact a{color:#0a192f;font-weight:600}
+#contact p{margin-bottom:10px}
 
 /* FOOTER */
 footer{
@@ -124,18 +144,14 @@ footer{
 }
 
 /* DARK MODE */
-body.dark{
-  background:#0a192f;
-  color:white;
-}
+body.dark{background:#0a192f;color:white}
 body.dark nav{background:#020c1b}
 body.dark .skill-box,
-body.dark .project-card{
-  background:#112240;
-}
+body.dark .project-card,
+body.dark .exp-card{background:#112240}
 body.dark footer{background:#112240}
 
-/* BUTTON */
+/* DARK BUTTON */
 .dark-btn{
   position:fixed;
   top:20px;
@@ -164,28 +180,44 @@ body.dark footer{background:#112240}
   <a href="#skills">Skills</a>
   <a href="#projects">Projects</a>
   <a href="#experience">Experience</a>
+  <a href="#education">Education</a>
+  <a href="#certifications">Certifications</a>
   <a href="#contact">Contact</a>
 </nav>
 
 <section id="about" class="fade-up">
-  <h2>About Me</h2>
+  <h2>Profile Summary</h2>
   <p>
-    Cyber Security & IT professional specialising in risk-driven analytics,
-    IT/OT governance, and compliance automation in regulated environments.
-    Experienced in policy development, cyber risk assessments, Python automation,
-    and Power BI reporting.
+    Cyber Security and IT professional specialising in risk-driven data analytics,
+    IT/OT governance, and compliance automation within regulated environments.
+    Experienced in designing organisation-wide cyber security policies, improving
+    system integrity, and reducing operational risks.
   </p>
+  <p>
+    Skilled in cyber and operational risk assessments, Python-based automation,
+    SQL-driven analytics, and Power BI dashboards. Bringing strong experience
+    from calibration, laboratory operations, and regulatory environments, with
+    a proven ability to bridge technical teams and business needs.
+  </p>
+
+  <a href="Khushboo_Patel_Resume.pdf" class="resume-btn" download>
+    📄 Download Resume
+  </a>
 </section>
 
 <section id="skills" class="fade-up">
   <h2>Key Skills</h2>
   <div class="skills">
-    <div class="skill-box">Cyber Risk Management (ISO 27001, NIST, COBIT)</div>
+    <div class="skill-box">Cyber Risk Management (ISO 27001, NIST, COBIT, ISA/IEC)</div>
     <div class="skill-box">IT & OT Security</div>
-    <div class="skill-box">Python • SQL • Power BI</div>
+    <div class="skill-box">Vulnerability Assessment</div>
     <div class="skill-box">Policy Development & Governance</div>
-    <div class="skill-box">Audit Preparation & Compliance</div>
-    <div class="skill-box">Stakeholder Communication</div>
+    <div class="skill-box">Risk Advisory & Audit Preparation</div>
+    <div class="skill-box">Python • SQL • HTML • JavaScript</div>
+    <div class="skill-box">Power BI Dashboards</div>
+    <div class="skill-box">Microsoft 365 & SharePoint</div>
+    <div class="skill-box">Stakeholder Communication & Leadership</div>
+    <div class="skill-box">Quality & Compliance Management</div>
   </div>
 </section>
 
@@ -194,52 +226,87 @@ body.dark footer{background:#112240}
   <div class="projects">
     <div class="project-card">
       <h3>Energy Consumption Prediction</h3>
-      <p>ML-based risk modelling to forecast energy consumption.</p>
+      <p>Machine learning–based risk modelling to predict monthly energy consumption.</p>
     </div>
     <div class="project-card">
       <h3>Smart Learning Platform</h3>
-      <p>MongoDB schema design for analytics-driven learning ecosystem.</p>
+      <p>MongoDB schema design for a connected learning ecosystem with analytics.</p>
     </div>
     <div class="project-card">
       <h3>AI Symposium Research</h3>
-      <p>Governance risks of emotionally intelligent AI systems.</p>
+      <p>Research on risks and governance of emotionally intelligent AI systems.</p>
     </div>
   </div>
 </section>
 
 <section id="experience" class="fade-up">
   <h2>Professional Experience</h2>
-  <div class="timeline">
-    <div class="timeline-item">
+
+  <div class="exp-card">
+    <div class="exp-header">
       <h3>Calibration Technician – NVMS</h3>
       <span>Current | West Leederville, WA</span>
-      <p>Designed cyber security policies, conducted risk assessments,
-         built Python automation and Power BI dashboards.</p>
     </div>
-    <div class="timeline-item">
+    <div class="exp-content">
+      <p>Designed and implemented NVMS cyber security policies governing IT/OT systems.</p>
+      <p>Conducted cyber and operational risk assessments across laboratory environments.</p>
+      <p>Developed Python automation tools and Power BI dashboards for compliance and audits.</p>
+      <p>Integrated calibration workflows with digital systems, SAP, and quality documentation.</p>
+    </div>
+  </div>
+
+  <div class="exp-card">
+    <div class="exp-header">
       <h3>Team Leader – Materials Technology Centre</h3>
-      <span>Sep 2021 – Dec 2023</span>
-      <p>Led materials testing teams, ensured NATA compliance,
-         delivered quality improvements.</p>
+      <span>Sep 2021 – Dec 2023 | Hazelmere, WA</span>
     </div>
-    <div class="timeline-item">
+    <div class="exp-content">
+      <p>Led materials testing under Australian Standards and NATA accreditation.</p>
+      <p>Managed NCRs, audits, trend reporting, and continuous improvement initiatives.</p>
+      <p>Provided technical advice and managed customer complaints and resolutions.</p>
+    </div>
+  </div>
+
+  <div class="exp-card">
+    <div class="exp-header">
       <h3>Laboratory Technician – Midland Brick</h3>
-      <span>Jan 2020 – Sep 2021</span>
-      <p>Managed instrumentation data, compliance testing,
-         and secure digital records.</p>
+      <span>Jan 2020 – Sep 2021 | South Guildford, WA</span>
+    </div>
+    <div class="exp-content">
+      <p>Conducted compliance testing for environmental and operational risks.</p>
+      <p>Maintained secure digital records, instrumentation data, and reporting systems.</p>
     </div>
   </div>
 </section>
 
+<section id="education" class="fade-up">
+  <h2>Education</h2>
+  <p><strong>Master of ICT</strong> – University of the Sunshine Coast (Expected 2025)<br>
+     Major: Cyber Security & Data Analysis</p>
+  <p><strong>Diploma of Information Technology</strong> – Equinim College, 2025</p>
+  <p><strong>Bachelor & Master of Science</strong> – Biotechnology</p>
+</section>
+
+<section id="certifications" class="fade-up">
+  <h2>Certifications</h2>
+  <ul>
+    <li>Microsoft Certified: Security, Compliance & Identity Fundamentals</li>
+    <li>IT Specialist – Python</li>
+    <li>NATA – Quality Management in Laboratory</li>
+    <li>Excel Advanced – Power BI, VBA</li>
+  </ul>
+</section>
+
 <section id="contact" class="fade-up">
   <h2>Contact</h2>
-  <p>📍 Aveley, WA</p>
+  <p>📍 Aveley, WA 6069</p>
   <p>📧 <a href="mailto:p.kh2601@gmail.com">p.kh2601@gmail.com</a></p>
+  <p>📱 +61 415 225 295</p>
   <p>🔗 <a href="https://www.linkedin.com/in/khushboo-patel-1959a812a" target="_blank">LinkedIn</a></p>
 </section>
 
 <footer>
-  © 2026 Khushboo Patel — Cyber Security Portfolio
+  © 2026 Khushboo Patel — Cyber Security & Data Analytics Portfolio
 </footer>
 
 <script>
@@ -247,16 +314,19 @@ function toggleDark(){
   document.body.classList.toggle("dark");
 }
 
-const faders = document.querySelectorAll(".fade-up");
-const observer = new IntersectionObserver(entries=>{
+const faders=document.querySelectorAll(".fade-up");
+const observer=new IntersectionObserver(entries=>{
   entries.forEach(entry=>{
     if(entry.isIntersecting){
       entry.target.classList.add("show");
     }
   });
 },{threshold:0.2});
-
 faders.forEach(el=>observer.observe(el));
+
+document.querySelectorAll(".exp-card").forEach(card=>{
+  card.addEventListener("click",()=>card.classList.toggle("active"));
+});
 </script>
 
 </body>
