--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@ footer{
 <section id="about" class="fade-up">
   <h2>Profile Summary</h2>
   <p>
-    Cyber Security and IT professional specialising in risk-driven analytics,
-    IT/OT governance, and compliance automation within regulated environments.
+  Cyber Security and IT professional with a solid foundation in cyber risk management, governance, compliance, and data-driven operations, supported by postgraduate studies in Information and Communication Technology (ICT) 
+  Experienced in designing and implementing organisation-wide Cyber Security Policies at NVMS, strengthening IT/OT governance, improving system integrity, and reducing operational risks. 
+  Skilled in conducting cyber and operational risk assessments, process optimisation, and automation using Python, SQL, and Power BI.
   </p>
   <p>
-    I bring a rare blend of cyber governance expertise, hands-on data analytics,
-    and operational experience from calibration and laboratory environments.
-    My strength lies in translating complex cyber and compliance requirements
-    into practical, business-aligned solutions.
+    Bringing several years of experience in calibration, laboratory operations, and technical service delivery, with a strong background in data management systems, equipment workflows, quality control, and regulatory compliance. 
+    Adept at integrating calibration processes with digital systems, enhancing accuracy, traceability, and reporting efficiency. Known for bridging the gap between technical teams, business needs, and cybersecurity requirements, translating complex concepts into clear, actionable strategies. 
+    Highly motivated to continue advancing in cybersecurity and IT, leveraging a strong blend of hands-on technical experience and operational expertise.
   </p>
 
   <a href="Khushboo_Patel_Resume.pdf" class="resume-btn" download>
@@ -240,6 +240,27 @@ footer{
         Developed Python-based automation tools and Power BI dashboards to improve
         compliance reporting, audit readiness, traceability, and management visibility.
       </p>
+      <p>
+       Built Power BI dashboards to monitor calibration performance, cybersecurity vulnerabilities, 
+        and system integrity
+      </p>
+      <p>
+       Integrated data management systems to streamline calibration workflows and ensure traceability
+      </p>
+      <p>
+        Collaborated with engineers and management to embed cybersecurity best practices
+      </p>
+      <p>
+        Performed calibration and maintenance of noise meters in line with regulatory standards
+      </p>
+       <p>Managed SAP-based inventory, quoting, booking, invoicing, and reporting
+       </p>
+      <p> Implemented process improvements to enhance accuracy and efficiency
+      </p>
+      <p> Managed laboratory scheduling, equipment maintenance, workflow coordination, and quality control
+      </p>
+      <p> Maintained full regulatory and quality documentation </p>
+      <p> Provided technical support and training </p>
     </div>
   </div>
 
