--- a/index.html
+++ b/index.html
@@ -222,47 +222,29 @@ footer{
 <section id="experience" class="fade-up">
   <h2>Professional Experience (Click to Expand)</h2>
 
-  <div class="card">
-    <div class="card-header">
-      <h3>Calibration Technician – NVMS</h3>
-      <span>Current | WA</span>
-    </div>
-    <div class="card-content">
-      <p>
-        Designed and implemented organisation-wide Cyber Security Policies
-        governing IT and OT systems in a regulated laboratory environment.
-      </p>
-      <p>
-        Conducted cyber and operational risk assessments, identifying vulnerabilities
-        across instrumentation, data flows, and supporting IT infrastructure.
-      </p>
-      <p>
-        Developed Python-based automation tools and Power BI dashboards to improve
-        compliance reporting, audit readiness, traceability, and management visibility.
-      </p>
-      <p>
-       Built Power BI dashboards to monitor calibration performance, cybersecurity vulnerabilities, 
-        and system integrity
-      </p>
-      <p>
-       Integrated data management systems to streamline calibration workflows and ensure traceability
-      </p>
-      <p>
-        Collaborated with engineers and management to embed cybersecurity best practices
-      </p>
-      <p>
-        Performed calibration and maintenance of noise meters in line with regulatory standards
-      </p>
-       <p>Managed SAP-based inventory, quoting, booking, invoicing, and reporting
-       </p>
-      <p> Implemented process improvements to enhance accuracy and efficiency
-      </p>
-      <p> Managed laboratory scheduling, equipment maintenance, workflow coordination, and quality control
-      </p>
-      <p> Maintained full regulatory and quality documentation </p>
-      <p> Provided technical support and training </p>
-    </div>
+ <div class="exp-card">
+  <div class="card-header">
+    <h3>Calibration Technician – NVMS</h3>
+    <span class="exp-date">Current | WA</span>
   </div>
+
+  <div class="card-content">
+    <ul>
+      <li>Designed and implemented organisation-wide Cyber Security policies governing IT and OT systems in a regulated laboratory environment.</li>
+      <li>Conducted cyber and operational risk assessments across instrumentation, data flows, and supporting IT infrastructure.</li>
+      <li>Developed Python-based automation tools and Power BI dashboards to improve compliance reporting, audit readiness, and management visibility.</li>
+      <li>Built Power BI dashboards to monitor calibration performance, cybersecurity vulnerabilities, and system integrity.</li>
+      <li>Integrated data management systems to streamline calibration workflows and ensure full traceability.</li>
+      <li>Collaborated with engineers and management to embed cybersecurity best practices into operational processes.</li>
+      <li>Performed calibration and maintenance of noise meters in line with regulatory and accreditation standards.</li>
+      <li>Managed SAP-based inventory, quoting, booking, invoicing, and reporting activities.</li>
+      <li>Implemented process improvements to enhance accuracy, efficiency, and turnaround time.</li>
+      <li>Managed laboratory scheduling, equipment maintenance, workflow coordination, and quality control.</li>
+      <li>Maintained full regulatory, quality, and audit documentation.</li>
+      <li>Provided technical support and training to internal teams.</li>
+    </ul>
+  </div>
+</div>
 
   <div class="card">
     <div class="card-header">
