--- a/index.html
+++ b/index.html
@@ -221,6 +221,44 @@ footer{
 
 <section id="experience" class="fade-up">
   <h2>Professional Experience (Click to Expand)</h2>
+.exp-card {
+  background: #fdfefe;
+  border-radius: 18px;
+  padding: 28px;
+  margin-bottom: 30px;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.08);
+}
+
+/* Header alignment */
+.card-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 18px;
+}
+
+.card-header h3 {
+  margin: 0;
+  font-size: 1.25rem;
+  color: #2c3e50;
+}
+
+.exp-date {
+  font-size: 0.9rem;
+  color: #6c757d;
+}
+
+/* Content spacing */
+.card-content ul {
+  padding-left: 20px;
+  margin: 0;
+}
+
+.card-content li {
+  margin-bottom: 10px;
+  line-height: 1.8;
+  color: #333;
+}
 
  <div class="exp-card">
   <div class="card-header">
