--- a/index.html
+++ b/index.html
@@ -254,7 +254,38 @@
             <i class="fas fa-chevron-down"></i>
         </div>
         <div class="card-content">
-            <p>Led materials testing operations under Australian Standards and NATA accreditation. Managed audits, non-conformances, and continuous improvement initiatives.</p>
+           <li>Coordinated materials testing (cement physical & chemical) under Australian Standards & NATA</li>
+            <li>Ensured compliance with Quality Manual, ITPs, and accreditation requirements</li>
+            <li>Reviewed test data, issued reports, and maintained statistical databases</li>
+            <li>Managed product specification changes and NCRs</li>
+            <li>Delivered trend reporting and quality improvement recommendations</li>
+            <li>Participated in R&D and design activities</li>
+            <li>Managed customer complaints and resolutions</li>
+            <li>Provided technical advice to Technical Managers and Sales Teams</li>
+            <li>Maintained hazard awareness and workplace safety</li>
+            <li>Assisted in business, NATA, and safety audits</li>
+        </div>
+    </div>
+
+     <div class="card">
+        <div class="card-header">
+            <div>
+                <h3>Laboratory Technician - Midland Brick</h3>
+                <small>Jan 2020 - Sep 2021</small>
+            </div>
+            <i class="fas fa-chevron-down"></i>
+        </div>
+        <div class="card-content">
+           <li>Conducted compliance testing for environmental and operational risks</li>
+            <li>Managed instrumentation data and reporting systems</li>
+            <li>Developed secure digital record systems for testing and compliance</li>
+            <li>Managed product specification changes and NCRs</li>
+            <li>Delivered trend reporting and quality improvement recommendations</li>
+            <li>Participated in R&D and design activities</li>
+            <li>Managed customer complaints and resolutions</li>
+            <li>Provided technical advice to Technical Managers and Sales Teams</li>
+            <li>Maintained hazard awareness and workplace safety</li>
+            <li>Assisted in business and safety audits</li>
         </div>
     </div>
 </section>
