--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Khushboo Patel | Cyber Security & Data Executive</title>
     
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;800&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="image_2.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
     <style>
         :root {
@@ -171,7 +171,7 @@
 
 <header>
     <div class="profile-container">
-        <img src="IMG_2251.jpeg" alt="Khushboo Patel Professional Portfolio" class="profile-img">
+        <img src="image_2.png" alt="Khushboo Patel Professional Portfolio" class="profile-img">
     </div>
     <h1>Khushboo Patel</h1>
     <p>Cyber Security • Data Analyst • IT Governance</p>
@@ -193,7 +193,7 @@
     <p>Bringing several years of experience in calibration, laboratory operations, and technical service delivery, with a strong background in data management systems, equipment workflows, quality control, and regulatory compliance. Adept at integrating calibration processes with digital systems, enhancing accuracy, traceability, and reporting efficiency.</p>
     
     <div style="text-align:center">
-        <a href="Khushboo_Patel_Resume.pdf" class="resume-btn" download>📄 Download Official Resume</a>
+        <a href="Khushboo_Patel_Resume 2025.docx" class="resume-btn" download>📄 Download Official Resume</a>
     </div>
 </section>
 
