--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 <section id="education" class="fade-in">
     <h2 class="section-title">Education</h2>
     <div class="skills-grid">
-        <div class="skill-box"><strong>Master of ICT</strong> – University of the Sunshine Coast (Expected 2025)</div>
+        <div class="skill-box"><strong>Master of ICT</strong> – UniSC (Exp 2026)</div>
         <div class="skill-box"><strong>Diploma of IT</strong> – Equinim College</div>
         <div class="skill-box"><strong>BSc & MSc</strong> – Biotechnology</div>
     </div>
