--- a/index.html
+++ b/index.html
@@ -318,13 +318,18 @@
         </div>
         <div class="card-content">
             <ul>
-                <li>Designed and implemented organisation-wide Cyber Security policies governing IT and OT systems in a regulated laboratory environment.</li>
+              <li>Designed and implemented organisation-wide Cyber Security policies governing IT and OT systems in a regulated laboratory environment.</li>
                 <li>Conducted cyber and operational risk assessments across instrumentation, data flows, and supporting IT infrastructure.</li>
-                <li>Developed Python-based automation tools and Power BI dashboards to improve compliance reporting and audit readiness.</li>
+                <li>Developed Python-based automation tools and Power BI dashboards to improve compliance reporting, audit readiness, and management visibility.</li>
                 <li>Built Power BI dashboards to monitor calibration performance, cybersecurity vulnerabilities, and system integrity.</li>
                 <li>Integrated data management systems to streamline calibration workflows and ensure full traceability.</li>
+                <li>Collaborated with engineers and management to embed cybersecurity best practices into operational processes.</li>
                 <li>Performed calibration and maintenance of noise meters in line with regulatory and accreditation standards.</li>
                 <li>Managed SAP-based inventory, quoting, booking, invoicing, and reporting activities.</li>
+                <li>Implemented process improvements to enhance accuracy, efficiency, and turnaround time.</li>
+                <li>Managed laboratory scheduling, equipment maintenance, workflow coordination, and quality control.</li>
+                <li>Maintained full regulatory, quality, and audit documentation.</li>
+                <li>Provided technical support and training to internal teams.</li>
             </ul>
         </div>
     </div>
@@ -339,11 +344,16 @@
         </div>
         <div class="card-content">
             <ul>
-                <li>Coordinated materials testing under Australian Standards and NATA accreditation.</li>
+                <<li>Coordinated materials testing (cement physical & chemical) under Australian Standards & NATA accreditation.</li>
                 <li>Ensured compliance with Quality Manual, ITPs, and accreditation requirements.</li>
                 <li>Reviewed test data, issued reports, and maintained statistical databases.</li>
                 <li>Managed product specification changes and Non-Conformance Reports (NCRs).</li>
+                <li>Delivered trend reporting and quality improvement recommendations.</li>
+                <li>Participated in Research & Development (R&D) and design activities.</li>
+                <li>Managed customer complaints and resolutions.</li>
                 <li>Provided technical advice to Technical Managers and Sales Teams.</li>
+                <li>Maintained hazard awareness and workplace safety.</li>
+                <li>Assisted in business, NATA, and safety audits.</li>
             </ul>
         </div>
     </div>
@@ -366,6 +376,20 @@
         <div class="skill-box"><i class="fas fa-phone"></i> +61 415 225 295</div>
         <div class="skill-box"><i class="fab fa-linkedin"></i> linkedin.com/in/khushboo-patel-1959a812a</div>
     </div>
+      <div class="card-content">
+            <ul>
+                <li>Conducted compliance testing for environmental and operational risks.</li>
+                <li>Managed instrumentation data and reporting systems.</li>
+                <li>Developed secure digital record systems for testing and compliance.</li>
+                <li>Maintained secure digital records and instrumentation data systems aligned with regulatory requirements.</li>
+                <li>Delivered trend reporting and quality improvement recommendations.</li>
+                <li>Participated in R&D and design activities.</li>
+                <li>Managed customer complaints and resolutions.</li>
+                <li>Provided technical advice to Technical Managers and Sales Teams.</li>
+                <li>Maintained hazard awareness and workplace safety.</li>
+                <li>Assisted in business and safety audits.</li>
+            </ul>
+        </div>
 </section>
 
 <footer>
