--- a/index.html
+++ b/index.html
@@ -37,27 +37,27 @@
         h1, h2, h3 { font-family: 'Plus Jakarta Sans', sans-serif; color: var(--text-heading); }
 
         /* HEADER & HERO */
-        header {
-            min-height: 80vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            padding: 40px 20px;
-        }
+       header {
+    min-height: 60vh; /* Reduced height for better flow */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start; /* Changed from center to flex-start */
+    text-align: left;        /* Changed from center to left */
+    max-width: 1100px;       /* Match section width */
+    margin: 0 auto;
+    padding: 80px 25px 40px 25px;
+}
 
-        .profile-container { margin-bottom: 35px; }
-
-        .profile-img {
-            width: 220px;
-            height: 220px;
-            border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
-            object-fit: cover;
-            border: 6px solid var(--surface);
-            box-shadow: 0 20px 40px -10px rgba(13, 148, 136, 0.3);
-            animation: morph 8s ease-in-out infinite;
-        }
+.profile-img {
+    width: 180px;            /* Slightly smaller to fit the left alignment better */
+    height: 180px;
+    border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
+    object-fit: cover;
+    border: 6px solid var(--surface);
+    box-shadow: 0 20px 40px -10px rgba(13, 148, 136, 0.3);
+    animation: morph 8s ease-in-out infinite;
+}
 
         @keyframes morph {
             0% { border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%; }
